@startuml chess-class-diagram
!pragma layout smetana
skinparam classAttributeIconSize 0

interface GameEngine {
  +executeMove(move, state): MoveResult
}
interface TurnManager {
  +nextPlayer(color, state): Color
}
interface WinCondition {
  +evaluate(state): GameStatus
}
interface MoveBehaviour {
  +isValidMove(move, piece, state): boolean
}
interface PieceKind {
  +pieceId(): String
}
interface GameExtraState {
  +update(move, state): GameExtraState
}

class Game {
  +executeMove(move): GameResult
  +undo(): Game
  +redo(): Game
}
class GameState {
  +board: Board
  +currentPlayer: Color
  +status: GameStatus
  +extraState: GameExtraState
}
class Board {
  +pieces: Map<Position, Piece>
}
class Piece {
  +color: Color
  +type: PieceKind
  +moveBehaviour: MoveBehaviour
}

package "chess/model/pieces" {
  class King implements PieceKind
  class Queen implements PieceKind
  class Rook implements PieceKind
  class Bishop implements PieceKind
  class Knight implements PieceKind
  class Pawn implements PieceKind
}

class CompositeExtraState implements GameExtraState {
  +states: List<GameExtraState>
}
class EnPassantExtraState implements GameExtraState
class CastlingExtraState implements GameExtraState

class ChessPieceFactory {
  +king(color): Piece
  +queen(color): Piece
  +rook(color): Piece
  +bishop(color): Piece
  +knight(color): Piece
  +pawn(color): Piece
}
class CheckmateWinCondition implements WinCondition
class StandardTurnManager implements TurnManager
class GameEngineImpl implements GameEngine {
  -moveValidator: MoveValidator
  -winCondition: WinCondition
  -turnManager: TurnManager
  -boardUpdater: BoardUpdater
}
class ChessGameFactory {
  +createStandardGame(): Game
  +createFromBoard(board, player, rights, enPassant): Game
}

Game --> GameEngine
Game --> GameState
GameState --> Board
GameState --> GameExtraState
Board --> Piece
Piece --> PieceKind
Piece --> MoveBehaviour
GameEngineImpl --> TurnManager
GameEngineImpl --> WinCondition
ChessGameFactory ..> Game : creates
ChessPieceFactory ..> Piece : creates

@enduml